# cpy

./: CMakeLists.txt  copy_osc52.c
tests/: 01_case_single_line.sh  02_case_lorem.sh  03_case_lorem_many_terminating_newlines.sh  expected_lorem.txt  expected_output.txt  lorem_many_trailing.txt
